修改一些逻辑